--- a/urbackup-server/userparameter_urbackup-server_freebsd.conf
+++ b/urbackup-server/userparameter_urbackup-server_freebsd.conf
@@ -6,6 +6,6 @@
 ##    sysctl security.bsd.see_other_gids=1
 ##
 
-UserParameter=urbackup-server.is-active,service urbackup_server status 1>/dev/null && echo 1 || echo 0
-UserParameter=urbackup-server.is-failed,service urbackup_server status 1>/dev/null && echo 0 || echo 1
-UserParameter=urbackup-server.is-enabled,service -e | grep -cs urbackup_server
+UserParameter=urbackup-server.service.is-active,service urbackup_server status 1>/dev/null && echo 1 || echo 0
+UserParameter=urbackup-server.service.is-failed,service urbackup_server status 1>/dev/null && echo 0 || echo 1
+UserParameter=urbackup-server.service.is-enabled,service -e | grep -cs urbackup_server
