--- a/urbackup-server/userparameter_urbackup-server_ubuntu.conf
+++ b/urbackup-server/userparameter_urbackup-server_ubuntu.conf
@@ -4,3 +4,4 @@
 UserParameter=urbackup-server.service.is-active,systemctl is-active --quiet urbackupsrv && echo 1 || echo 0
 UserParameter=urbackup-server.service.is-failed,systemctl is-failed --quiet urbackupsrv && echo 1 || echo 0
 UserParameter=urbackup-server.service.is-enabled,systemctl is-enabled --quiet urbackupsrv && echo 1 || echo 0
+UserParameter=urbackup-server.package.is-upgradeable,apt list --upgradeable | grep urbackup-server -c
