--- a/urbackup-server/urbackup-server_ubuntu.conf
+++ b/urbackup-server/urbackup-server_ubuntu.conf
@@ -1,7 +1,7 @@
 ## Place this file in a directory included in your configuration file
 ## e.g. /etc/zabbix/zabbix_agentd.d/
 
-UserParameter=urbackup-server.service.is-active,systemctl is-active --quiet urbackupsrv && echo 1 || echo 0
-UserParameter=urbackup-server.service.is-failed,systemctl is-failed --quiet urbackupsrv && echo 1 || echo 0
-UserParameter=urbackup-server.service.is-enabled,systemctl is-enabled --quiet urbackupsrv && echo 1 || echo 0
-UserParameter=urbackup-server.package.is-upgradeable,apt list --upgradeable 2>/dev/null | grep urbackup-server -c
+UserParameter=urbackup-server.service.active,systemctl is-active --quiet urbackupsrv && echo 1 || echo 0
+UserParameter=urbackup-server.service.failed,systemctl is-failed --quiet urbackupsrv && echo 1 || echo 0
+UserParameter=urbackup-server.service.enabled,systemctl is-enabled --quiet urbackupsrv && echo 1 || echo 0
+UserParameter=urbackup-server.package.upgradeable,apt list --upgradeable 2>/dev/null | grep urbackup-server -c
