--- a/urbackup-server/urbackup-server_freebsd.conf
+++ b/urbackup-server/urbackup-server_freebsd.conf
@@ -6,7 +6,7 @@
 ##    sysctl security.bsd.see_other_gids=1
 ##
 
-UserParameter=urbackup-server.service.is-active,service urbackup_server status 1>/dev/null && echo 1 || echo 0
-UserParameter=urbackup-server.service.is-failed,service urbackup_server status 1>/dev/null && echo 0 || echo 1
-UserParameter=urbackup-server.service.is-enabled,service -e | grep -cs urbackup_server
-UserParameter=urbackup-server.package.is-upgradeable,pkg version -RU -l \< | grep urbackup-server -c
+UserParameter=urbackup-server.service.active,service urbackup_server status 1>/dev/null && echo 1 || echo 0
+UserParameter=urbackup-server.service.failed,service urbackup_server status 1>/dev/null && echo 0 || echo 1
+UserParameter=urbackup-server.service.enabled,service -e | grep -cs urbackup_server
+UserParameter=urbackup-server.package.upgradeable,pkg version -RU -l \< | grep urbackup-server -c
