--- a/zfs-health/zfs-health.conf
+++ b/zfs-health/zfs-health.conf
@@ -1,5 +1,5 @@
-## Place this file in a directory included in your configuration file
-## e.g. /etc/zabbix/zabbix_agentd.d/
+# Place this file in a directory included in your configuration file
+# e.g. /etc/zabbix/zabbix_agentd.d/
 
 # Check for pools with potential problems.
 # Expected return value: a number indicating the number of pools with potential problems.
