--- a/ubuntu-updates/ubuntu-updates.conf
+++ b/ubuntu-updates/ubuntu-updates.conf
@@ -6,8 +6,8 @@
 
 # Check the number of pending updates.
 # Expected return value: a number indicating the number of updates.
-UserParameter=ubuntu.updates.all,/usr/lib/update-notifier/apt-check 2>&1 | cut -d ';' -f 1
+UserParameter=ubuntu-updates.all,/usr/lib/update-notifier/apt-check 2>&1 | cut -d ';' -f 1
 
 # Check the number of pending security updates.
 # Expected return value: a number indicating the number of updates.
-UserParameter=ubuntu.updates.security,/usr/lib/update-notifier/apt-check 2>&1 | cut -d ';' -f 2
+UserParameter=ubuntu-updates.security,/usr/lib/update-notifier/apt-check 2>&1 | cut -d ';' -f 2
