--- a/ubuntu-updates/ubuntu-updates.conf
+++ b/ubuntu-updates/ubuntu-updates.conf
@@ -6,7 +6,7 @@
 # System requirements:
 #    apt-check
 
-# Check the number of pending updates.
+# Check the number of all pending updates, including security updates.
 # Expected return value: a number indicating the number of updates.
 UserParameter=ubuntu-updates.all,/usr/lib/update-notifier/apt-check 2>&1 | cut -d ';' -f 1
 
