--- a/urbackup-server/urbackup-server_ubuntu.conf
+++ b/urbackup-server/urbackup-server_ubuntu.conf
@@ -3,6 +3,9 @@
 # Place this file in a directory included in your configuration file
 # e.g. /etc/zabbix/zabbix_agentd.d/
 
+# System requirements:
+#    systemd
+
 # Check if UrBackup Server service is currently active.
 # Expected return value:
 #    1 - is active
