--- a/zfs-health/zfs-health.conf
+++ b/zfs-health/zfs-health.conf
@@ -3,6 +3,6 @@
 # Place this file in a directory included in your configuration file
 # e.g. /etc/zabbix/zabbix_agentd.d/
 
-# Check for pools with potential problems.
+# Check the health status of ZFS pools.
 # Expected return value: a number indicating the number of pools with potential problems.
-UserParameter=zfs-health.pool.problems,zpool list -H -o health | grep -i -v online | wc -l
+UserParameter=zfs-health.pool.health,zpool list -H -o health | grep -i -v online | wc -l
