Add capacity check

--- a/zfs-health/zfs-health.conf
+++ b/zfs-health/zfs-health.conf
@@ -6,3 +6,7 @@
 # Check the health status of ZFS pools.
 # Expected return value: a number indicating the number of pools with potential problems.
 UserParameter=zfs-health.pool.health,zpool list -H -o health | grep -i -v online | wc -l
+
+# Check the capacity of ZFS pools.
+# Expected return value: a number indicating the number of pools with potential problems.
+UserParameter=zfs-health.pool.capacity,zpool list -H -o capacity | cut -d '%' -f1 | awk '$1>80' | wc -l
