--- a/zfs-health/zfs-health.conf
+++ b/zfs-health/zfs-health.conf
@@ -3,10 +3,10 @@
 # Place this file in a directory included in your configuration file
 # e.g. /etc/zabbix/zabbix_agentd.d/
 
-# Check the health status of ZFS pools.
-# Expected return value: a number indicating the number of pools with potential problems.
+# Check for pools with health status other than ONLINE.
+# Expected return value: a number indicating the number of matching pools.
 UserParameter=zfs-health.pool.health,zpool list -H -o health | grep -i -v online | wc -l
 
-# Check the capacity of ZFS pools.
-# Expected return value: a number indicating the number of pools with potential problems.
+# Check for pools with more than 80% pool space used (capacity).
+# Expected return value: a number indicating the number of matching pools.
 UserParameter=zfs-health.pool.capacity,zpool list -H -o capacity | cut -d '%' -f1 | awk '$1>80' | wc -l
