--- a/needrestart/needrestart.conf
+++ b/needrestart/needrestart.conf
@@ -2,6 +2,8 @@
 
 # Place this file in a directory included in your configuration file
 # e.g. /etc/zabbix/zabbix_agentd.d/
+#
+# Use with corresponding sudoers file.
 
 # System requirements:
 #    needrestart
@@ -16,7 +18,7 @@ UserParameter=needrestart.kernel,needrestart -b -r l -k | grep -i 'needrestart-k
 
 # Check which services need to be restarted after an upgrade.
 # Expected return value: a number indicating the number of services.
-UserParameter=needrestart.libs,needrestart -b -r l -l | grep -i 'needrestart-svc' | wc -l
+UserParameter=needrestart.libs,sudo needrestart -b -r l -l | grep -i 'needrestart-svc' | wc -l
 
 # Check which processes need to be restarted after an upgrade.
 # Expected return value: a number indicating the number of outdated processes.
