--- a/needrestart/needrestart.conf
+++ b/needrestart/needrestart.conf
@@ -22,4 +22,4 @@ UserParameter=needrestart.libs,sudo needrestart -b -r l -l | grep -i 'needrestar
 
 # Check which processes need to be restarted after an upgrade.
 # Expected return value: a number indicating the number of outdated processes.
-UserParameter=needrestart.pids,needrestart -b -r l -l | grep -i 'needrestart-pid' | wc -l
+UserParameter=needrestart.pids,sudo needrestart -b -r l -l | grep -i 'needrestart-pid' | wc -l
