--- a/urbackup-server/urbackup-server_freebsd.conf
+++ b/urbackup-server/urbackup-server_freebsd.conf
@@ -1,13 +1,15 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/urbackup-server
-
-# Place this file in a directory included in your configuration file
+#
+# Place this file in a directory included in your configuration file,
 # e.g. /usr/local/etc/zabbix44/zabbix_agentd.conf.d/
-
+#
 # System requirements:
-# Running a service command in FreeBSD as non-root user requires
-#    sysctl security.bsd.see_other_uids=1
-#    sysctl security.bsd.see_other_gids=1
+# Running a service command in FreeBSD as non-root user requires:
+#    - sysctl security.bsd.see_other_uids=1
+#    - sysctl security.bsd.see_other_gids=1
 # Alternatively, you can also use sudo.
+#
+
 
 # Check if UrBackup Server service is currently active.
 # Expected return value:
