--- a/zfs-checks/zfs-checks.conf
+++ b/zfs-checks/zfs-checks.conf
@@ -1,9 +1,11 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/zfs-checks
-
-# Place this file in a directory included in your configuration file
+#
+# Place this file in a directory included in your configuration file,
 # e.g. /etc/zabbix/zabbix_agentd.d/
+#
 
-# Check for pools with health status other than ONLINE.
+
+# Check for pools with health status other than 'ONLINE'.
 # Expected return value: a number indicating the number of matching pools.
 UserParameter=zfs-checks.pool.health,zpool list -H -o health | grep -i -v online | wc -l
 
