--- a/needrestart/needrestart.conf
+++ b/needrestart/needrestart.conf
@@ -1,12 +1,14 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/needrestart
-
-# Place this file in a directory included in your configuration file
+#
+# Place this file in a directory included in your configuration file,
 # e.g. /etc/zabbix/zabbix_agentd.d/
 #
 # Use with corresponding sudoers file.
-
+#
 # System requirements:
-#    needrestart
+#    - needrestart
+#
+
 
 # Check the kernel status.
 # Expected return value:
