--- a/ubuntu-reboot-required/ubuntu-reboot-required.conf
+++ b/ubuntu-reboot-required/ubuntu-reboot-required.conf
@@ -1,7 +1,9 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/ubuntu-reboot-required
-
-# Place this file in a directory included in your configuration file
+#
+# Place this file in a directory included in your configuration file,
 # e.g. /etc/zabbix/zabbix_agentd.d/
+#
+
 
 # Check is system reboot is required.
 # Expected return value:
