--- a/urbackup-server/urbackup-server_ubuntu.conf
+++ b/urbackup-server/urbackup-server_ubuntu.conf
@@ -1,10 +1,12 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/urbackup-server
-
-# Place this file in a directory included in your configuration file
+#
+# Place this file in a directory included in your configuration file,
 # e.g. /etc/zabbix/zabbix_agentd.d/
-
+#
 # System requirements:
-#    systemd
+#    - systemd
+#
+
 
 # Check if UrBackup Server service is currently active.
 # Expected return value:
