Fix obsolete kernel checks

--- a/needrestart/needrestart.conf
+++ b/needrestart/needrestart.conf
@@ -16,7 +16,7 @@
 #    1 - no pending upgrade
 #    2 - ABI compatible upgrade pending
 #    3 - version upgrade pending
-UserParameter=needrestart.kernel,needrestart -b -r l -k | grep -i 'needrestart-ksta' | cut -d ':' -f2 | xargs
+UserParameter=needrestart.kernel,sudo needrestart -b -r l -k | grep -i 'needrestart-ksta' | cut -d ':' -f2 | xargs
 
 # Check which services need to be restarted after an upgrade.
 # Expected return value: a number indicating the number of services.
