--- a/needrestart/needrestart.conf
+++ b/needrestart/needrestart.conf
@@ -1,27 +1,28 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/needrestart
 #
-# Place this file in a directory included in your configuration file,
-# e.g. /etc/zabbix/zabbix_agentd.d/
-#
-# Use with corresponding sudoers file.
-#
 # System requirements:
-#    - needrestart
+# - needrestart package installed
+#
+# Usage:
+# - Copy this file to a directory included in your Zabbix Agent configuration,
+#   e.g. /etc/zabbix/zabbix_agentd.d/
+# - Copy corresponding sudoers file to /etc/sudoers.d/ directory and set file
+#   permissions if needed
+# - Import corresponding template file on Zabbix Server
 #
 
-
-# Check the kernel status.
+# Check the kernel (version) status.
 # Expected return value:
-#    0 - unknown or failed to detect
-#    1 - no pending upgrade
-#    2 - ABI compatible upgrade pending
-#    3 - version upgrade pending
+#  0 - unknown or failed to detect
+#  1 - no pending upgrade
+#  2 - ABI compatible upgrade pending
+#  3 - version upgrade pending
 UserParameter=needrestart.kernel,sudo needrestart -b -r l -k | grep -i 'needrestart-ksta' | cut -d ':' -f2 | xargs
 
-# Check which services need to be restarted after an upgrade.
+# Check if some services need to be restarted (after library upgrades).
 # Expected return value: a number indicating the number of services.
 UserParameter=needrestart.libs,sudo needrestart -b -r l -l | grep -i 'needrestart-svc' | wc -l
 
-# Check which processes need to be restarted after an upgrade.
+# Check if some processes need to be restarted (after package upgrades).
 # Expected return value: a number indicating the number of outdated processes.
 UserParameter=needrestart.pids,sudo needrestart -b -r l -l | grep -i 'needrestart-pid' | wc -l
