--- a/ubuntu-reboot-required/ubuntu-reboot-required.conf
+++ b/ubuntu-reboot-required/ubuntu-reboot-required.conf
@@ -1,12 +1,13 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/ubuntu-reboot-required
 #
-# Place this file in a directory included in your configuration file,
-# e.g. /etc/zabbix/zabbix_agentd.d/
+# Usage:
+# - Copy this file to a directory included in your Zabbix Agent configuration,
+#   e.g. /etc/zabbix/zabbix_agentd.d/
+# - Import corresponding template file on Zabbix Server
 #
-
 
 # Check is system reboot is required.
 # Expected return value:
-#    1 - reboot is required
-#    0 - reboot is not required
+#  1 - reboot is required
+#  0 - reboot is not required
 UserParameter=ubuntu-reboot-required,stat /var/run/reboot-required 2>/dev/null 1>/dev/null && echo 1 || echo 0
