--- a/zfs-checks/zfs-checks.conf
+++ b/zfs-checks/zfs-checks.conf
@@ -1,9 +1,10 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/zfs-checks
 #
-# Place this file in a directory included in your configuration file,
-# e.g. /etc/zabbix/zabbix_agentd.d/
+# Usage:
+# - Copy this file to a directory included in your Zabbix Agent configuration,
+#   e.g. /etc/zabbix/zabbix_agentd.d/
+# - Import corresponding template file on Zabbix Server
 #
-
 
 # Check for pools with health status other than 'ONLINE'.
 # Expected return value: a number indicating the number of matching pools.
