--- a/ubuntu-updates/ubuntu-updates.conf
+++ b/ubuntu-updates/ubuntu-updates.conf
@@ -1,12 +1,13 @@
 # https://github.com/bartmichu/zabbix-extensions/tree/master/ubuntu-updates
 #
-# Place this file in a directory included in your configuration file,
-# e.g. /etc/zabbix/zabbix_agentd.d/
-#
 # System requirements:
-#    - apt-check
-#
+#  - apt-check
 
+# Usage:
+# - Copy this file to a directory included in your Zabbix Agent configuration,
+#   e.g. /etc/zabbix/zabbix_agentd.d/
+# - Import corresponding template file on Zabbix Server
+#
 
 # Check the number of all pending updates, including security updates.
 # Expected return value: a number indicating the number of updates.
