--- a/ubuntu-reboot-required/ubuntu-reboot-required.conf
+++ b/ubuntu-reboot-required/ubuntu-reboot-required.conf
@@ -6,7 +6,7 @@
 # - Import corresponding template file on Zabbix Server
 #
 
-# Check is system reboot is required.
+# Check if system reboot is required.
 # Expected return value:
 #  1 - reboot is required
 #  0 - reboot is not required
